# ClaudeGRC

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
claudegrc/: congfig.py  main.py  utils.py
claudegrc/agents/: mapper.py  prompts.py
claudegrc/collectors/: aws.py
claudegrc/evidence/: store.py
claudegrc/reports/: generator.py
frameworks/: nist_ai_rmf_1.0.yaml  nist_csf_2.0.yaml  soc2_tsc_2026.yaml
mocks/: aws_cloudtrail_ai_events.json  aws_config_rules.json
tests/: test_main.py
